# fastrace

./: Cargo.toml  TODO.md  design.md  memo.md
.github/workflows/: bench.yml  ci.yml
benches/: Cargo.toml  a.py  compare.rs  compare_inst.rs  fmt.py  perfetto.rs  perfetto_inst.rs
benches/instruction_count/: compare.rs  perfetto.rs
benches/walltime/: compare.rs  perfetto.rs
dev/bench/: data.js
examples/: compare.rs
fastrace/: Cargo.toml
fastrace-perfetto/: Cargo.toml  build.rs
fastrace-perfetto/examples/: local_file.rs  network.rs
fastrace-perfetto/src/: lib.rs
fastrace-perfetto/src/fast/: mod.rs  object_pool.rs
fastrace-perfetto/src/utils/: mod.rs
fastrace/benches/: compare.rs
fastrace/examples/: compare.rs  hello.rs
fastrace/src/: span.rs
fastrace/src/collector/: global_collector.rs  id.rs
fastrace/src/local/: local_span.rs  local_span_line.rs  local_span_stack.rs  span_queue.rs
rt-trace/: Cargo.toml
rt-trace/benches/: compare.rs
rt-trace/examples/: fastrace-bench.rs  hello.rs  local_file.rs  perfetto_backend.rs  run_forever.rs
rt-trace/src/: config.rs  consumer.rs  lib.rs  macros.rs  span.rs  span_queue.rs
rt-trace/src/backend/: perfetto.rs  perfetto_protos.rs
rt-trace/src/fast/: mod.rs
rt-trace/src/tests/: span.rs
rt-trace/src/utils/: mod.rs  object_pool.rs  ring_buffer.rs  thread_id.rs
