[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[features]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
iai-callgrind = "0.14.1"
fastrace = { path = "../fastrace" }
rt-trace = { path = "../rt-trace" }

[[bench]]
name = "compare"
path = "compare.rs"
harness = false

[[bench]]
name = "compare_inst"
path = "compare_inst.rs"
harness = false

[[bench]]
name = "perfetto"
path = "perfetto.rs"
harness = false
