[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2021"
license = "MIT"

[features]

[dependencies]

[dev-dependencies]
criterion = "0.5.1"
iai-callgrind = "0.14.2"
fastrace = { path = "../fastrace" }
rt-trace = { path = "../rt-trace" }

[[bench]]
name = "wall_compare"
path = "walltime/compare.rs"
harness = false

[[bench]]
name = "wall_perfetto"
path = "walltime/perfetto.rs"
harness = false

[[bench]]
name = "inst_compare"
path = "instruction_count/compare.rs"
harness = false

[[bench]]
name = "inst_perfetto"
path = "instruction_count/perfetto.rs"
harness = false
