[package]
name = "rt-trace"
version = "0.1.0"

categories = ["development-tools::debugging"]
description = "Perfetto reporter for fastrace"
keywords = ["tracing", "span", "perfetto"]
readme = "README.md"

edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fastrace = { path = "../fastrace", features = ["enable"] }
fastant = "0.1"
prost = "0.13.5"
prost-derive = "0.13.5"
bytes = "1.10"
thread-id = "4.2.1"
rtrb = "0.3"

# TODO: remove once_cell once MSRV is above 1.80
once_cell = "1.19"

[dev-dependencies]

[build-dependencies]
# we need to fix the version to match our msrv
prost-build = "=0.13.2"

# protobuf compilation issue
[target.'cfg(not(target_os = "windows"))'.build-dependencies]
protobuf-src = "2.1"
